--- a/player/templates/player/menu.html
+++ b/player/templates/player/menu.html
@@ -1,8 +1,9 @@
 <a href="/">Обзор</a>
-<br><br><a href="/mining">Добыча ресурсов</a>
-<br><br><a href="/map">Карта</a>
-<br><br><a href="/party">Партия</a>
+<br><br><a href="/mining">Добыча</a>
 <br><br><a href="/storage">Склад</a>
 <br><br><a href="/assets">Активы</a>
 <br><br><a href="/trading">Торговля</a>
 <br><br><a href="/factory">Производство</a>
+<br><br><a href="/map">Карта</a>
+<br><br><a href="/party">Партия</a>
+<!--<br><br><a href="/government">Правительство</a>-->
