--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -19,13 +19,27 @@
 {% endif %}
 <div class="row">
     Привет, {{ player }} !
-    <br>
-    <!--если игрок в полете-->
-    {% if player.destination %}
-    Вы летите в регион {{ player.destination }}
-    {% else %}
-    Ты находишься в регионе {{ player.region }}
-    {% endif %}
+    <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+            Мир
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+            <!--если игрок в полете-->
+            {% if player.destination %}
+            Вы летите в регион <img src="static/img/regions/{{ player.destination.on_map_id }}.png" width="25px" height="25px" alt="world_icon">{{ player.destination }}
+            {% else %}
+            Регион: <img src="static/img/regions/{{ player.region.on_map_id }}.png" width="25px" height="25px" alt="world_icon">{{ player.region }}
+            {% endif %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left">Игроков: {{ world_pop }}</div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left">Партий: {{ world_parties }}</div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left"></div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left">Игроков: {{ region_pop }}</div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left">Партий: {{ region_parties }}</div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left"></div>
+    </div>
     {% get_current_language as LANGUAGE_CODE %}
     {% get_language_info for LANGUAGE_CODE as lang %}
     <!-- Tabs -->
