--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -34,10 +34,10 @@
     </div>
     <div class="row">
         <div class="col-xs-2 col-sm-2 col-md-2" align="left">Игроков: {{ world_pop }}</div>
-        <div class="col-xs-2 col-sm-2 col-md-2" align="left">Партий: {{ world_parties }}</div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left" onclick="window.location.href = '/world/parties/'"  style="cursor: pointer">Партий: {{ world_parties }}</div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left"></div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left">Игроков: {{ region_pop }}</div>
-        <div class="col-xs-2 col-sm-2 col-md-2" align="left">Партий: {{ region_parties }}</div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="left" onclick="window.location.href = '/region/{{ player.region.pk }}/parties/'"  style="cursor: pointer">Партий: {{ region_parties }}</div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left"></div>
     </div>
     {% get_current_language as LANGUAGE_CODE %}
