--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -85,7 +85,7 @@
             </script>
             <div style="display: flex">
                 <div style="flex: 10 10 auto">
-                    <input id="chat-message-input-{{ LANGUAGE_CODE }}" type="text" size="100" style="width: 100%">
+                    <input id="chat-message-input-{{ LANGUAGE_CODE }}" type="text" size="100" maxlength="500" style="width: 100%">
                 </div>
                 <div style="flex: 1 1 auto">
                     <input id="chat-message-submit-{{ LANGUAGE_CODE }}" type="button" value="Отправить" class="chat-button"
