--- a/region/templates/region/region_view.html
+++ b/region/templates/region/region_view.html
@@ -3,6 +3,7 @@
 {% load i18n %}{% load tz %}{% load dict_key %}
 
 {% block for_scripts_and_css %}
+<script src='{% static "js/region_view.js" %}?{{ csrf_token }}'></script>
 {% endblock %}
 
 {% block content %}
@@ -10,13 +11,32 @@
         <div class="row">
             <div class="col-xs-1 col-sm-1 col-md-1" align="center"></div>
             <div class="col-xs-4 col-sm-4 col-md-4" align="center">
-                <div align="center" style="height: 50px; font-size: 20pt; font-weight: bold;">{{ region.region_name }}</div>
-                <img src='/static/img/regions/{{ region.on_map_id }}.png' class='image' width='250' height='250'>
+                <div class="row">
+                    <div align="center" style="height: 50px; font-size: 20pt; font-weight: bold;">{{ region.region_name }}</div>
+                </div>
+                <div class="row">
+                    <img src='/static/img/regions/{{ region.on_map_id }}.png' class='image' width='250' height='250'>
+                </div>
+                <div class="row">
+                    {% if not player.residency == region %}
+                        {% if player.region == region %}
+                            {% if player.destination %}
+                                <button type="submit" disabled class="save btn btn-danger">Недоступно в полете</button>
+                            {% else %}
+                                <button type="submit" onclick="get_residency()" class="save btn btn-success">Получить прописку</button>
+                            {% endif %}
+                        {% else %}
+                        <button type="submit" disabled class="save btn btn-danger">Недоступно из другого региона</button>
+                        {% endif %}
+                    {% else %}
+                        <button type="submit" disabled class="save btn btn-default">Регион прописки</button>
+                    {% endif %}
+                </div>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6">
-                <div class="row polaroid" style="margin-right: 10px">
+                <div class="row" style="margin-right: 10px">
                     <div class="tab-content">
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                 <b><font size="4">Жителей:</font></b>
                             </div>
@@ -24,7 +44,7 @@
                                 <b><font size="4">{{ players_count }}</font></b>
                             </div>
                         </div>
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                 <b><font size="4">Партий:</font></b>
                             </div>
@@ -32,7 +52,7 @@
                                 <b><font size="4">{{ parties_count }}</font></b>
                             </div>
                         </div>
-<!--                        <div class="row flex" style="margin-left: 10px;">-->
+<!--                        <div class="row flex" >-->
 <!--                            <div class="col-xs-6 col-sm-6 col-md-6" align="left">-->
 <!--                                <b><font size="4">Войн:</font></b>-->
 <!--                            </div>-->
@@ -41,7 +61,7 @@
 <!--                            </div>-->
 <!--                        </div>-->
                         <!--гос-->
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                 <b><font size="4">{% trans 'Государство' %}:</font></b>
                             </div>
@@ -60,7 +80,7 @@
                             </div>
                         </div>
                         <div class="line"></div>
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <b>
                                     <font size="4">{% trans 'Запасы золота' %}: </font>
@@ -74,7 +94,7 @@
                                 </b>
                             </div>
                         </div>
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <b>
                                     <font size="4">{% trans 'Запасы нефти' %}: </font>
@@ -88,7 +108,7 @@
                                 </b>
                             </div>
                         </div>
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <b>
                                     <font size="4">{% trans 'Марка нефти' %}: </font>
@@ -100,7 +120,7 @@
                                 </b>
                             </div>
                         </div>
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <b>
                                     <font size="4">{% trans 'Запасы руд' %}: </font>
@@ -114,7 +134,7 @@
                                 </b>
                             </div>
                         </div>
-                        <div class="row flex" style="margin-left: 10px;">
+                        <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <b>
                                     <font size="4">{% trans 'Качество руды (уголь/железо/бокситы)' %}: </font>
@@ -130,7 +150,7 @@
                                 </b>
                             </div>
                         </div>
-<!--                        <div class="row flex" style="margin-left: 10px;">-->
+<!--                        <div class="row flex" >-->
 <!--                            <div class="col-xs-6 col-sm-6 col-md-6">-->
 <!--                                <b>-->
 <!--                                    <font size="4">{% trans 'reg_taxes' %}: </font>-->
@@ -146,7 +166,7 @@
 <!--                                </b>-->
 <!--                            </div>-->
 <!--                        </div>-->
-<!--                        <div class="row flex" style="margin-left: 10px;">-->
+<!--                        <div class="row flex" >-->
 <!--                            <div class="col-xs-6 col-sm-6 col-md-6">-->
 <!--                                <b>-->
 <!--                                    <font size="4">{% trans 'reg_med_rate' %}: </font>-->
@@ -158,7 +178,7 @@
 <!--                                </b>-->
 <!--                            </div>-->
 <!--                        </div>-->
-<!--                        <div class="row flex" style="margin-left: 10px;">-->
+<!--                        <div class="row flex" >-->
 <!--                            <div class="col-xs-6 col-sm-6 col-md-6">-->
 <!--                                <b>-->
 <!--                                    <font size="4">{% trans 'reg_med_lvl' %}: </font>-->
