--- a/player/templates/player/menu.html
+++ b/player/templates/player/menu.html
@@ -6,4 +6,4 @@
 <br><br><a href="/factory">Производство</a>
 <br><br><a href="/map">Карта</a>
 <br><br><a href="/party">Партия</a>
-<!--<br><br><a href="/government">Правительство</a>-->
+<br><br><a href="/government">Правительство</a>
