оптимизация списка регионов

--- a/region/templates/lists/world_regions_list.html
+++ b/region/templates/lists/world_regions_list.html
@@ -45,7 +45,7 @@
                                          {% endif %}
                                      </div>
                                      <div class="col-xs-2 col-sm-2 col-md-2">
-                                         {% if region in regions_online %}
+                                         {% if region in regions_pop %}
                                         <h3>{{ regions_pop|dict_key:region }}</h3>
                                          {% else %}
                                         <h3>0</h3>
