--- a/party/templates/party/manage.html
+++ b/party/templates/party/manage.html
@@ -4,22 +4,163 @@
 {% load l10n %}{% load i18n %}
 {% block for_scripts_and_css %}
 <script src='{% static "js/manage.js" %}?{{ csrf_token }}'></script>
+
+<script src='{% static "cropper.js" %}?{{ csrf_token }}'></script>
+<link rel="stylesheet" href='{% static "cropper.css" %}?{{ csrf_token }}'>
+<script>
+    var img_mode = 1;
+
+    function pic_mode(mode){
+        img_mode = mode;
+    }
+
+    jQuery(document).ready(function ($) {
+        $('.imgUpload').submit(function(e){
+            e.preventDefault();
+
+            var sending_data = new FormData(this);
+            sending_data.append("img_mode", img_mode);
+
+<!--            var request = new XMLHttpRequest();-->
+<!--            request.open("POST", "/change_party_pic/");-->
+<!--            request.send(sending_data);-->
+            $.ajax({
+              url: "/change_party_pic/",
+              type: "POST",
+              data: sending_data,
+              processData: false,  // Сообщить jQuery не передавать эти данные
+              contentType: false,   // Сообщить jQuery не передавать тип контента
+              success: function(result){
+              if (result.response == 'ok'){
+                  location.reload();
+              }
+              else{
+                  alert(result.response)
+              }
+            }
+            });
+        });
+    });
+
+    $(function () {
+
+    /* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
+    $(".id_image").change(function () {
+      if (this.files && this.files[0]) {
+        var reader = new FileReader();
+        reader.onload = function (e) {
+          $("#image").attr("src", e.target.result);
+          $("#modalCrop").modal("show");
+        }
+        reader.readAsDataURL(this.files[0]);
+      }
+    });
+
+    /* SCRIPTS TO HANDLE THE CROPPER BOX */
+    var $image = $("#image");
+    var cropBoxData;
+    var canvasData;
+    $("#modalCrop").on("shown.bs.modal", function () {
+      $image.cropper({
+        viewMode: 0.5,
+        aspectRatio: 1/1,
+        minCropBoxWidth: 250,
+        minCropBoxHeight: 250,
+        ready: function () {
+          $image.cropper("setCanvasData", canvasData);
+          $image.cropper("setCropBoxData", cropBoxData);
+        }
+      });
+    }).on("hidden.bs.modal", function () {
+      cropBoxData = $image.cropper("getCropBoxData");
+      canvasData = $image.cropper("getCanvasData");
+      $image.cropper("destroy");
+    });
+
+    // Enable zoom in button
+    $(".js-zoom-in").click(function () {
+      $image.cropper("zoom", 0.1);
+    });
+
+    // Enable zoom out button
+    $(".js-zoom-out").click(function () {
+      $image.cropper("zoom", -0.1);
+    });
+
+    // Enable move up button
+    $(".js-pic-up").click(function () {
+      $image.cropper("move", 0, 10);
+    });
+
+    // Enable move down button
+    $(".js-pic-down").click(function () {
+      $image.cropper("move", 0, -10);
+    });
+
+    /* SCRIPT TO COLLECT THE DATA AND POST TO THE SERVER */
+    $(".js-crop-and-upload").click(function () {
+        var cropData = $image.cropper("getData");
+        $("#id_x" + img_mode).val(cropData["x"]);
+        $("#id_y" + img_mode).val(cropData["y"]);
+        $("#id_height" + img_mode).val(cropData["height"]);
+        $("#id_width" + img_mode).val(cropData["width"]);
+        $("#formUpload" + img_mode).submit();
+    });
+
+    });
+</script>
 {% endblock %}
 
 {% block content %}
+<!-- MODAL TO CROP THE IMAGE -->
+<div class="modal fade" id="modalCrop">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="" id="image" style="max-width: 50%; max-height: 50%;">
+      </div>
+      <div class="modal-footer">
+        <div class="btn-group pull-left" role="group">
+          <button type="button" class="btn btn-default js-zoom-in">
+            <span class="glyphicon glyphicon-zoom-in"></span>
+          </button>
+          <button type="button" class="btn btn-default js-zoom-out">
+            <span class="glyphicon glyphicon-zoom-out"></span>
+          </button>
+        </div>
+        <div class="btn-group pull-left" role="group">
+          <button type="button" class="btn btn-default js-pic-up">
+            <span class="glyphicon glyphicon-arrow-up"></span>
+          </button>
+          <button type="button" class="btn btn-default js-pic-down">
+            <span class="glyphicon glyphicon-arrow-down"></span>
+          </button>
+        </div>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
+        <button type="button" class="btn btn-primary js-crop-and-upload">Загрузить</button>
+      </div>
+    </div>
+    </div>
+</div>
 <div id="party" class="tabcontent">
     <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-4" align="center">
             <!--Картинка партии-->
             <img id="party_coat" src="{% if player.party.image %}{{ player.party.image.url }}{% else %}{% static 'img/nopic_party.png' %}{% endif %}" width="250" height="250">
             {% if player.party_post.party_lead %}
-<!--            <form method="POST" enctype="multipart/form-data" class="post-form" id="party_coat-form">-->
-<!--                {% csrf_token %}-->
-<!--                <input id="new_party_coat" type="text" name="file" maxlength="150" {% if player.party.image %}value="{{ player.party.image }}"{% endif %} style="width: 80%">-->
-<!--                <button type="submit" value="Submit" enctype="multipart/form-data" class="save btn btn-warning">-->
-<!--                    <img src="{% static 'img/reload.png' %}">-->
-<!--                </button>-->
-<!--            </form>-->
+                <form method="post" enctype="multipart/form-data" class="imgUpload" id="formUpload1">
+                    <input type="hidden" name="csrfmiddlewaretoken" value="zRIwLrdB6zqNgicjkkaun84werEZu68P2Rl16giwoGlmXnkl3ScRU3faiAPcn8KF">
+                    <input type="file" name="image" accept="image/*" class="id_image" onclick="pic_mode(1)">
+                    <input type="hidden" name="x" id="id_x1">
+                    <input type="hidden" name="y" id="id_y1">
+                    <input type="hidden" name="width" id="id_width1">
+                    <input type="hidden" name="height" id="id_height1">
+                </form>
             {% endif %}
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4" align="center">
@@ -101,17 +242,14 @@
             <!--Картинка партийного фона-->
             <img id="party_back" src="{% if player.party.members_image %}{{ player.party.members_image.url }}{% else %}{% static 'img/noback_party.png' %}{% endif %}" width="250" height="250">
             {% if player.party_post.party_lead %}
-<!--            <form method="POST" enctype="multipart/form-data" id="party_back-form">-->
-<!--                {% csrf_token %}-->
-<!--                {% if player.party.members_image %}-->
-<!--                <input id="new_party_back" type="text" name="file" maxlength="150" value="{{ player.party.members_image }}" style="width: 80%">-->
-<!--                {% else %}-->
-<!--                <input id="new_party_back" type="text" name="file" maxlength="150" style="width: 80%">-->
-<!--                {% endif %}-->
-<!--                <button type="submit" value="Submit" enctype="multipart/form-data" class="save btn btn-warning">-->
-<!--                    <img src="{% static 'img/reload.png' %}">-->
-<!--                </button>-->
-<!--            </form>-->
+                <form method="post" enctype="multipart/form-data" class="imgUpload" id="formUpload2">
+                    <input type="hidden" name="csrfmiddlewaretoken" value="zRIwLrdB6zqNgicjkkaun84werEZu68P2Rl16giwoGlmXnkl3ScRU3faiAPcn8KF">
+                    <input type="file" name="members_image" accept="image/*" class="id_image" onclick="pic_mode(2)">
+                    <input type="hidden" name="x" id="id_x2">
+                    <input type="hidden" name="y" id="id_y2">
+                    <input type="hidden" name="width" id="id_width2">
+                    <input type="hidden" name="height" id="id_height2">
+                </form>
             {% endif %}
         </div>
     </div>
