--- a/state/templates/state/gov/government.html
+++ b/state/templates/state/gov/government.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load dict_key %}
 {% load i18n %}{% load tz %}
+{% load government.parliament %}
+{% load government.treasury %}
 
 {% block for_scripts_and_css %}
 <script src='{% static "js/government.js" %}?{{ csrf_token }}'></script>
@@ -73,50 +75,20 @@
                 <div class="col-xs-12 col-sm-12 col-md-12" align="center" style="height: 700px;">
                     <!-- Tabs -->
                     {% if player.region.state %}
-                        <!--для каждой парламентской партии из списка-->
-                        {% for party in parties %}
-                        <div class="row">
-                            <!--Получить её имя-->
-                            <font size="5"><b>
-                                <!--если у партии есть аватарка-->
-                                {% if party.party.image_link %}
-                                <img src="{{ party.party.image_link }}" width="30" height="30">
-                                {% else %}
-                                <img src="{% static 'img/nopic_party.png' %}" width="30" height="30">
-                                {% endif %}
-                                {{ party.party.title }}, {{ party.seats }}% мест:
-                            </b></font>
-                        </div>
-                        {% for deputate in deputates %}
-                        <div class="row flex">
-                            <div class="col-xs-2 col-sm-2 col-md-2">
-                                {% if deputate.party.pk == party.party.pk %}
-                                    <a href='profile/{{ deputate.pk }}' target="_blank">
-                                        <!--если пользователь загрузил аватарку-->
-                                        {% if deputate.image %}
-                                        <img src="{{ deputate.image.url }}" width="80" height="80" align="right">
-                                        {% else %}
-                                        <img src="{% static 'img/nopic.png' %}" width="80" height="80"
-                                             align="right">
-                                        {% endif %}
-                                    </a>
-                                {% endif %}
-                            </div>
-                            <div class="col-xs-5 col-sm-5 col-md-5">
-                            {% if deputate.party.pk == party.party.pk %}
-                                <a href='profile/{{ deputate.pk }}' style="text-decoration: none;" target="_blank">
-                                    <h3><b>{{ deputate.nickname }}</b></h3>
-                                </a>
+                        <ul class="nav nav-tabs">
+                            {% if has_parliament %}
+                            <li class="active"><a data-toggle="tab" href="#parliament">Парламент</a></li>
                             {% endif %}
+                            <li><a data-toggle="tab" href="#treasury">Казна</a></li>
+                        </ul>
+                        <div class="tab-content">
+                            <div id="parliament" class="tab-pane fade in active">
+                                {% parliament state %}
                             </div>
-                            <div class="col-xs-5 col-sm-5 col-md-5">
-                            {% if deputate.party.pk == party.party.pk %}
-                                <h3><b>{{ deputate.party_post.title }}</b></h3>
-                            {% endif %}
+                            <div id="treasury" class="tab-pane fade">
+                                {% treasury state %}
                             </div>
                         </div>
-                        {% endfor %}
-                        {% endfor %}
                     {% else %}
                     <div class="row" style="margin-top: 15px;">
                         <font size="3"><b>Государство ещё не основано</b></font>
