Выдача свободных мандатов игрокам партии

--- a/party/templates/party/party_blocks/has_party.html
+++ b/party/templates/party/party_blocks/has_party.html
@@ -58,7 +58,7 @@
 <div class="row">
     <div class="col-xs-1 col-sm-1 col-md-1">
     </div>
-    <div class="col-xs-10 col-sm-10 col-md-10" align="left" id="all_members">
+    <div class="col-xs-10 col-sm-10 col-md-10" align="left" id="all_members" style=" height: 640px; overflow-y: auto; overflow-x: hidden;">
         <div class="row">
             <div class="col-xs-1 col-sm-1 col-md-1">
             </div>
