--- a/state/templates/state/gov/parliament.html
+++ b/state/templates/state/gov/parliament.html
@@ -1,46 +1,59 @@
 {% load static %}
 
 <!--для каждой парламентской партии из списка-->
-{% for party in parties %}
+{% for parl_party in parties %}
 <div class="row">
     <!--Получить её имя-->
     <font size="5"><b>
         <!--если у партии есть аватарка-->
-        {% if party.party.image %}
-        <img src="{{ party.party.image.url }}" width="30" height="30">
+        {% if parl_party.party.image %}
+        <img src="{{ parl_party.party.image.url }}" width="30" height="30">
         {% else %}
         <img src="{% static 'img/nopic_party.png' %}" width="30" height="30">
         {% endif %}
-        {{ party.party.title }}, {{ party.seats }}% мест:
+        {{ parl_party.party.title }}, {{ parl_party.seats }}% мест:
     </b></font>
 </div>
 {% for deputate in deputates %}
 <div class="row flex">
     <div class="col-xs-2 col-sm-2 col-md-2">
-        {% if deputate.party.pk == party.party.pk %}
-            <a href='profile/{{ deputate.pk }}' target="_blank">
+        {% if deputate.player %}
+            {% if deputate.party.pk == parl_party.party.pk %}
+            <a href='profile/{{ deputate.player.pk }}' target="_blank">
                 <!--если пользователь загрузил аватарку-->
-                {% if deputate.image %}
-                <img src="{{ deputate.image.url }}" width="80" height="80" align="right">
+                {% if deputate.player.image %}
+                <img src="{{ deputate.player.image.url }}" width="80" height="80" align="right">
                 {% else %}
                 <img src="{% static 'img/nopic.png' %}" width="80" height="80"
                      align="right">
                 {% endif %}
             </a>
+            {% endif %}
+        {% else %}
+            <a href="/set_mandate_view/">
+                <img src="{% static 'plus.png' %}" width="80" height="80"
+                         align="right">
+            </a>
         {% endif %}
     </div>
     <div class="col-xs-5 col-sm-5 col-md-5">
-    {% if deputate.party.pk == party.party.pk %}
-        <a href='profile/{{ deputate.pk }}' style="text-decoration: none;" target="_blank">
-            <h3><b>{{ deputate.nickname }}</b></h3>
+    {% if deputate.player %}
+        {% if deputate.party.pk == parl_party.party.pk %}
+        <a href='profile/{{ deputate.player.pk }}' style="text-decoration: none;" target="_blank">
+            <h3><b>{{ deputate.player.nickname }}</b></h3>
         </a>
+        {% endif %}
+    {% else %}
+        <h3><b>свободно</b></h3>
     {% endif %}
     </div>
+    {% if deputate %}
     <div class="col-xs-5 col-sm-5 col-md-5">
-    {% if deputate.party.pk == party.party.pk %}
-        <h3><b>{{ deputate.party_post.title }}</b></h3>
+    {% if deputate.party.pk == parl_party.party.pk %}
+        <h3><b>{{ deputate.player.party_post.title }}</b></h3>
     {% endif %}
     </div>
+    {% endif %}
 </div>
 {% endfor %}
 {% endfor %}
