--- a/state/templates/state/gov/government.html
+++ b/state/templates/state/gov/government.html
@@ -84,7 +84,7 @@
                         <div class="tab-content">
                             {% if parliament %}
                             <div id="parliament" class="tab-pane fade in active" style=" height: 640px; overflow-y: auto; overflow-x: hidden;">
-                                {% parliament parliament %}
+                                {% parliament player parliament %}
                             </div>
                             {% endif %}
                             <div id="treasury" class="tab-pane fade">
