--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -5,6 +5,7 @@
 {% load tz %}
 {% block for_scripts_and_css %}
 <script src='{% static "cropper.js" %}?{{ csrf_token }}'></script>
+<script src='{% static "profile.js" %}?{{ csrf_token }}'></script>
 <link rel="stylesheet" href='{% static "cropper.css" %}?{{ csrf_token }}'>
 <script>
     $(function () {
@@ -200,6 +201,32 @@
                                     <b><font size="5" >беспартийный</font></b>
 <!--                                    <b><font size="5" >{% trans 'unaffiliated' %}</font></b>-->
                                 {% endif %}
+                            </div>
+                        </div>
+                        <!--биография-->
+                        <div class="row flex" style="margin-left: 10px;">
+                            <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+                                <b><font size="5" >О себе:</font></b>
+                            </div>
+                        </div>
+                        <div class="row flex" style="margin-left: 10px;">
+                            <div class="col-xs-10 col-sm-10 col-md-10">
+                                <textarea id="player_bio" disabled maxlength="250" style="width: 100%; height: 60px">{% if not player.bio %}{{ user_link }}{% else %}{{ player.bio }}{% endif %}</textarea>
+                            </div>
+                            <div class="col-xs-2 col-sm-2 col-md-2">
+                                <div class="row flex" style="margin-left: 10px;">
+                                    <button id="bio_edit" type="button" class="btn btn-warning" onclick="open_bio()">
+                                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                    </button>
+                                    <button id="bio_cancel" type="button" class="btn btn-danger" style="display:none" onclick="close_bio()">
+                                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                    </button>
+                                </div>
+                                <div class="row flex" style="margin-left: 10px; margin-top: 5px;">
+                                    <button id="bio_send" type="button" class="btn btn-success" style="display:none" onclick="send_bio()">
+                                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
