--- a/player/templates/lists/region_players_list.html
+++ b/player/templates/lists/region_players_list.html
@@ -19,15 +19,19 @@
                                 {% for character in lines %}
                                  <div class="row">
                                     <div class="col-xs-2 col-sm-2 col-md-2">
-                                        <!--если пользователь загрузил аватарку-->
-                                        {% if character.image %}
-                                        <img src="{{ character.image.url }}" width="50" height="50" align="right">
-                                        {% else %}
-                                        <img src="{% static 'img/nopic.png' %}" width="50" height="50" align="right">
-                                        {% endif %}
+                                        <a href='/profile/{{ character.pk }}' target="_blank">
+                                            <!--если пользователь загрузил аватарку-->
+                                            {% if character.image %}
+                                            <img src="{{ character.image.url }}" width="50" height="50" align="right">
+                                            {% else %}
+                                            <img src="{% static 'img/nopic.png' %}" width="50" height="50" align="right">
+                                            {% endif %}
+                                        </a>
                                     </div>
                                     <div class="col-xs-4 col-sm-4 col-md-4">
-                                        <h3>{{ character.nickname }}</h3>
+                                        <a href='/profile/{{ character.pk }}' target="_blank">
+                                            <h3>{{ character.nickname }}</h3>
+                                        </a>
                                     </div>
                                 </div>
                                 {% endfor %}
