история партий игрока

--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -186,6 +186,7 @@
                                     <b><font size="5" >беспартийный</font></b>
 <!--                                    <b><font size="5" >{% trans 'unaffiliated' %}</font></b>-->
                                 {% endif %}
+                                <b> <font size="3" onclick="window.location.href = '/party_history/{{ player.pk }}/'" style="cursor: pointer">( история )</font></b>
                             </div>
                         </div>
                         <!--партия-->
