--- a/player/templates/player/menu.html
+++ b/player/templates/player/menu.html
@@ -7,3 +7,4 @@
 <br><br><a href="/map">Карта</a>
 <br><br><a href="/party">Партия</a>
 <br><br><a href="/government">Правительство</a>
+<br><br><a href="/wars">Войны</a>
